--- a/Project/Preprocessing.Rmd
+++ b/Project/Preprocessing.Rmd
@@ -44,31 +44,32 @@ body {
 
 
 ## TURKEY CAR MARKET 2020
+
 ## 1. Data
 
 The data are about the online car advertisements in Turkey market. There are 15 columns in the dataset. These are
 
-1. Date (the date that the advertisement is published)
-2. Brand (the brand of the car)
-3. Vehicle_Type_Group (the vehicle type group of the car like Ranger, Sorento etc.)
-4. Vehicle_Type (the vehicle type of the car like 1.6, Broadway etc.)
-5. Model_Year (the year the car is produced)
-6. Fuel_Type (fuel type that the car has like Diesel, Electricity etc.)
-7. Gear (gear type the car has like Automatic, Manual etc.)
-8. CCM (the indicator of the motor capacity)
-9. Horse_Power (the indicator of the motor power)
-10. Color (the color of the car)
-11. Body_Type (the type of the body of the car like Sedan, Minivan etc.)
-12. Seller (the owner of the car)
-13. Seller_Status (the status of the usage of the car like 0 km, 2nd Hand etc.)
-14. Kilometers (the kilometer that the car traveled)
-15. Price (the price of the car in that advertisement)
+1. `Date` (the date that the advertisement is published)
+2. `Brand` (the brand of the car)
+3. `Vehicle_Type_Group` (the vehicle type group of the car like Ranger, Sorento etc.)
+4. `Vehicle_Type` (the vehicle type of the car like 1.6, Broadway etc.)
+5. `Model_Year` (the year the car is produced)
+6. `Fuel_Type` (fuel type that the car has like Diesel, Electricity etc.)
+7. `Gear` (gear type the car has like Automatic, Manual etc.)
+8. `CCM` (the indicator of the motor capacity)
+9. `Horse_Power` (the indicator of the motor power)
+10. `Color` (the color of the car)
+11. `Body_Type` (the type of the body of the car like Sedan, Minivan etc.)
+12. `Seller` (the owner of the car)
+13. `Seller_Status` (the status of the usage of the car like 0 km, 2nd Hand etc.)
+14. `Kilometers` (the kilometer that the car traveled)
+15. `Price` (the price of the car in that advertisement)
 
 This data is prepared from the Turkish sites, so all values sand columns are in Turkish.
 
-### 1.1 Objectives and Required Informations for the Analyses
+### 1.1 Packages for Preprocessing Steps
 
-Before the analysis we need to upload required packages which are given in the below:
+Before the preprocessing, we need to upload required packages which are given in the below:
 
 1. tidyverse
 2. shiny
@@ -494,7 +495,7 @@ After these processes, we have a full dataset. You can see the summary of the da
 summary(carmarket)
 ```
 
-### Check Accuracy of Values 
+### 1.5 Check Accuracy of Values 
 
 Before starting any of the analysis, we need to check the accuracy of values. For example, we can look for the `Price` column that has negative values.
 
@@ -563,3 +564,4 @@ Now, our data is ready for making further analysis. So, we need to export the da
 write.csv(carmarket, file = "turkey_car_market_EDA.csv")
 ```
 
+For the analysis, you can follow this [link](https://pjournal.github.io/boun01g-data-mine-r-s/Project/ExplanatoryDataAnalysis.html)
